@@ -31,7 +31,6 @@ import com.google.common.collect.ImmutableList;
 /**
  * A node in the voldemort cluster
  * 
- * @author jay
  * 
  */
 @Threadsafe
@@ -135,6 +134,6 @@ public class Node implements Serializable, Comparable<Node> {
     }
 
     public int compareTo(Node other) {
-        return new Integer(this.id).compareTo(other.getId());
+        return Integer.valueOf(this.id).compareTo(other.getId());
     }
 }
